# crit-lines

./: .gitignore  README.md  pyproject.toml  run.py
config/: example.env
src/crit_lines/: cli.py
src/crit_lines/core/analysis_engine/: physics.py  simulator.py
src/crit_lines/core/data_models/: bike.py  course.py  gpx_parser.py  rider.py
src/crit_lines/infrastructure/config/: settings.py
src/crit_lines/interfaces/cli/: main.py
src/crit_lines/visualization/: plotter.py
